--- a/LojaTenisAula1/Views/Home/Index.cshtml
+++ b/LojaTenisAula1/Views/Home/Index.cshtml
@@ -1,8 +1,36 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model IEnumerable<TenisModel>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="py-5">
+
+    <div class="container">
+
+        <div class="text-center mb-5">
+            <form method="get" asp-action="Index" asp-controller="Home" class="d-flex justify-content-center">
+                <input name="pesquisar" class="form-control w-50 mx-2" style="border:1px solid black; border-radius: 10px" />
+                <button type="submit" class="btn btn-primary w-10" style="border-radius:10px">Pesquisar</button>
+            </form>
+        </div>
+
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-0 ">
+            @if (Model != null)
+            {
+                if (Model.Count() > 0)
+                {
+                    @foreach (var tenis in Model)
+                    {
+                        <div class="card" style="width:15rem; margin-left: 20px; margin-bottom:20px">
+                            <img src="/Imagem/@tenis.Foto" class="card-img-top" style="width:240px; height250px" />
+                            <div class="card-body">
+                                <h5 class="card-title">@tenis.Nome</h5>
+                                <h5 class="card-title">@tenis.Marca</h5>
+                                <h5 class="card-title"><b>R$ @tenis.Valor</b></h5>
+                                <a class="btn btn-primary w-100" style="font-size:16px" asp-action="Detalhes" asp-controller="Tenis" asp-route-id="@tenis.Id">Detalhes</a>
+                            </div>
+                        </div>
+                    }
+                }
+            }
+        </div>
+
+    </div>
 </div>
