--- a/LojaTenisAula1/Views/Tenis/Editar.cshtml
+++ b/LojaTenisAula1/Views/Tenis/Editar.cshtml
@@ -1,5 +1,5 @@
-﻿@using LojaTenisAula1.Dto.TenisDto
-@model CriarTenisDto
+﻿@model TenisModel
+
 
 @if (TempData["MensagemSucesso"] != null)
 {
@@ -16,58 +16,53 @@
 }
 
 <div class="container mt-5">
-    <form method="post" asp-action="Cadastrar" asp-controller="Tenis" enctype="multipart/form-data">
-        <h2>Cadastro de Tenis</h2>
+    <form method="post" asp-action="Editar" asp-controller="Tenis" enctype="multipart/form-data">
+        <h2>Edição de tenis - @Model.Nome</h2>
 
-        <div class="text-center">
-            <label for="ImageFile">
-                <img id="img" style="width:150px; height:200px" />
-            </label>
-        </div>
+        <input type="hidden" asp-for="Id" />
 
+        @if (Model.Foto != null)
+        {
+            <div class="text-center">
+                <label for="ImageFile">
+                    <img src="/Imagem/@Model.Foto" id="img" style="width:150px; height:200px" />
+                </label>
+            </div>
+
+        }
+
+
+        <input type="hidden" asp-for="Foto" />
         <div class="mb-1">
-
-            <label class="form-label mt-3">Capa:</label>
-            <input type="file" id="ImageFile" name="foto" class="form-control shadow-none" />
-
-
+            <label class="form-label mt-3">Foto:</label>
+            <input type="file" id="ImageFile" name="foto" class="form-control shadow-none" asp-for="Foto" />
         </div>
-
 
         <div class="mb-1">
             <label class="form-label">Nome:</label>
             <input type="text" asp-for="Nome" class="form-control shadow-none">
             <span class="text-danger" asp-validation-for="Nome"></span>
         </div>
-
-
         <div class="mb-1">
             <label class="form-label">Marca:</label>
             <input type="text" asp-for="Marca" class="form-control shadow-none">
             <span class="text-danger" asp-validation-for="Marca"></span>
         </div>
-
-
-
         <div class="mb-1">
             <label class="form-label">Valor:</label>
-            <input type="number" min="1" step="any" value="0" asp-for="Valor" class="form-control shadow-none">
+            <input type="number" min="1" step="any" asp-for="Valor" class="form-control shadow-none">
             <span class="text-danger" asp-validation-for="Valor"></span>
         </div>
 
 
 
-
-
         <div class="btn-box d-flex mt-3">
-            <button type="submit" type="button" class="btn btn-success w-50 mx-1"><i class="bi bi-plus-circle"></i> Cadastrar!</button>
+            <button type="submit" type="button" class="btn btn-success w-50 mx-1"><i class="bi bi-plus-circle"></i> Editar!</button>
             <a type="submit" class="btn btn-info w-50" asp-controller="Tenis" asp-action="Index"><i class="bi bi-arrow-left-circle"></i> Voltar</a>
         </div>
 
     </form>
 </div>
-
-
 
 
 
